third_party/move/move-compiler-v2/tests/op-equal/invalid5.move
module 0x42::test {
    fun testZ() {
        let x = 3;
        let y = (x += 2) * (x -= 1);
    }
}
